--- a/indexer.ipynb
+++ b/indexer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 1,
    "id": "f7647115-cb91-4a2c-b9c7-281d2b6f40f3",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 2,
    "id": "84753b75-6d7f-445b-be58-7de4f9e87c6d",
    "metadata": {},
    "outputs": [],
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 3,
    "id": "67754874-a6cc-4b80-81fe-e31886a4ae13",
    "metadata": {},
    "outputs": [
@@ -69,7 +69,7 @@
        "True"
       ]
      },
-     "execution_count": 148,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "id": "a988508b-aa8d-4931-b98c-132e3375f749",
    "metadata": {},
    "outputs": [],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 5,
    "id": "b35b9f7c-64df-4a7b-b7a4-9c7a34b9c0ca",
    "metadata": {},
    "outputs": [
@@ -236,7 +236,7 @@
        "4  https://www.liputan6.com/news/read/4612511/inf...  "
       ]
      },
-     "execution_count": 150,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 6,
    "id": "40e2e553-9fb5-4b9a-8857-a90202232561",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 7,
    "id": "c6f31668-d445-460f-bea4-8caf843e413b",
    "metadata": {},
    "outputs": [],
@@ -302,32 +302,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 8,
    "id": "c4fc3e7a",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sort_by_doc_freq(data: dict[str, dict[str, int]]) -> dict[str, dict[str, List[dict[str, int]]]]:\n",
     "    # convert: {\"pemerintah\": {\"0\": 1},\"dan\": {\"1\": 1, \"0\": 3}}\n",
-    "    # into   : {\"pemerintah\": [{\"0\": 1}],\"dan\": [{\"0\": 3, \"1\": 1}]}\n",
+    "    # into   : {\"pemerintah\": [{\"0\": 1}],\"dan\": [{\"0\": 3}, {\"1\": 1}]}\n",
     "    output_data = {}\n",
     "    for key, value in data.items():\n",
-    "        output_data[key] = []\n",
-    "        temp_dict = {}\n",
-    "        for k, v in sorted(value.items(), key=lambda item: (item, item), reverse=True):\n",
-    "            if len(temp_dict) < 2:\n",
-    "                temp_dict[k] = v\n",
-    "            else:\n",
-    "                output_data[key].append(temp_dict)\n",
-    "                temp_dict = {k: v}\n",
-    "        if temp_dict:\n",
-    "            output_data[key].append(temp_dict)\n",
+    "        temp_dict = []\n",
+    "        for k, v in value.items():\n",
+    "            temp_dict.append({k: v})\n",
+    "        output_data[key] = sorted(temp_dict, key=lambda x: list(x.values())[0], reverse=True)\n",
     "    return output_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 9,
    "id": "d9eb11a7-458b-4be4-99cd-c7383654acac",
    "metadata": {},
    "outputs": [],
@@ -455,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 10,
    "id": "5c942530-ec41-42d4-9ed6-316baa19be61",
    "metadata": {},
    "outputs": [
@@ -463,14 +457,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 14343/14343 [1:57:06<00:00,  2.04it/s]  \n"
+      "100%|██████████| 14343/14343 [1:35:58<00:00,  2.49it/s]  \n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total time to index: 7028.069321 seconds, avg: 0.490000 seconds/doc\n",
+      "Total time to index: 5761.201422 seconds, avg: 0.401673 seconds/doc\n",
       "Success indexing 14343 documents\n",
       "Success write /Users/yusufs/Magister-Ilmu-Komputer/materi-kuliah/semester-3/information-retrieval/20240504-boolean-retrieval/document_content_map.json (14343)\n",
       "Success write /Users/yusufs/Magister-Ilmu-Komputer/materi-kuliah/semester-3/information-retrieval/20240504-boolean-retrieval/word_map_not_stemmed_all_word.json (92778)\n",
